// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-semi.js [espree] format 1`] = `
"Unexpected token : (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
  4 | class A {
  5 |   a = b;"
`;

exports[`no-semi.js [meriyah] format 1`] = `
"[2:2]: Unexpected token: ':' (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
  4 | class A {
  5 |   a = b;"
`;

exports[`no-semi.js - {"semi":false} [espree] format 1`] = `
"Unexpected token : (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
  4 | class A {
  5 |   a = b;"
`;

exports[`no-semi.js - {"semi":false} [meriyah] format 1`] = `
"[2:2]: Unexpected token: ':' (2:2)
  1 | a
> 2 | ;::b.c
    |  ^
  3 |
  4 | class A {
  5 |   a = b;"
`;

exports[`no-semi.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
semi: false
                                                                                | printWidth
=====================================input======================================
a
;::b.c

class A {
  a = b;
  in
  c

  a = b;
  instanceof(){}
}

=====================================output=====================================
a
;::b.c

class A {
  a = b;
  in
  c

  a = b;
  instanceof() {}
}

================================================================================
`;

exports[`no-semi.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a
;::b.c

class A {
  a = b;
  in
  c

  a = b;
  instanceof(){}
}

=====================================output=====================================
a;
::b.c;

class A {
  a = b;
  in;
  c;

  a = b;
  instanceof() {}
}

================================================================================
`;
